[gd_scene load_steps=6 format=3 uid="uid://dsc83jfav0ul4"]

[ext_resource type="Script" path="res://Scripts/Ui/story_slide.gd" id="1_hog12"]
[ext_resource type="Texture2D" uid="uid://x855xqad2dk5" path="res://Assets/Gaphics/Ui/StorySlides/Moon.jpg" id="2_gte0k"]
[ext_resource type="Texture2D" uid="uid://dvl01c46brlp" path="res://Assets/Gaphics/Ui/StorySlides/robot.png" id="3_y06bi"]
[ext_resource type="Theme" uid="uid://bhlm6yt0qswao" path="res://MainTheme.tres" id="4_y04qk"]
[ext_resource type="AudioStream" uid="uid://cxcnox36kouh6" path="res://Assets/Audio/Sfx/Ui/keyboard.mp3" id="5_s2hnc"]

[node name="StorySlide1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hog12")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -212.0
offset_right = 1269.0
offset_bottom = 635.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05953, 1.27155)
texture = ExtResource("2_gte0k")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)

[node name="robot" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = -34.0
offset_top = -13.0
offset_right = 870.0
offset_bottom = 890.0
scale = Vector2(1.31984, 1.33063)
size_flags_vertical = 4
texture = ExtResource("3_y06bi")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="SlideTextDisplay" type="RichTextLabel" parent="ParallaxBackground/ParallaxLayer"]
offset_left = 218.0
offset_top = 127.0
offset_right = 931.0
offset_bottom = 271.0
theme = ExtResource("4_y04qk")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "Far away in a land beyond the influence of the wizard cats, word of their mischief reaches the DOMAIN_DEFENDATRON. 
Grabbing a tape gun and marker he prepares for a Copyright Carnage."

[node name="CharacterTimer" type="Timer" parent="."]
wait_time = 0.04
autostart = true

[node name="keyBoardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_s2hnc")
volume_db = -16.865

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_y04qk")
text = "Continue"

[connection signal="timeout" from="CharacterTimer" to="." method="_on_character_timer_timeout"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
